fixing index alignment and font size

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,103 +20,23 @@
 
 body {
   font-family: "Roboto";
-  line-height: 1.5;
+  --line-height: 1.5;
 }
 
 h1 {
   font-family: "Poppins";
-  line-height: 1.5;
+  line-height: var(--line-height);
 }
 
 h2 {
   font-family: "Poppins";
-  line-height: 1.5;
+  line-height: var(--line-height);
 }
 
-h3{
-  line-height: 1.5
+h3 {
+  line-height: var(--line-height);
 }
 
 textarea {
   resize: none;
-}
-
-
-
-/* Desktops and Large Screens */
-@media (max-width: 2400px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 3rem;
-  }
-  h3 {
-    font-size: 2.5rem;
-    
-  }
-  h4 {
-    font-size: 1.25rem;
-  } 
-  body {
-    font-size: 1.75rem;
-
-  }
-}
-
-/* Laptops */
-@media (max-width: 1400px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-  h2 {
-    font-size: 1.75rem;
-  }
-  h3 {
-    font-size: 1.5rem;
-  }
-  h4 {
-    font-size: 1.25rem;
-  } 
-  body {
-  font-size: 1rem;
-  }
-}
-
-/* Tablets */
-@media (max-width: 768px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-  h2 {
-    font-size: 1.75rem;
-  }
-  h3 {
-    font-size: 2rem;
-  }
-  h4 {
-    font-size: 1.25rem;
-  } 
-  body {
-  font-size: 1rem;
-  }
-}
-
-/* Mobile Devices */
-@media (max-width: 480px) {
-  h1 {
-    font-size: 2rem;
-  }
-  h2 {
-    font-size: 1.75rem;
-  }
-  h3 {
-    font-size: 2rem;
-  }
-  h4 {
-    font-size: 1.25rem;
-  } 
-  body {
-  font-size: 0.75rem;
-  }
 }
